--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ Jinja2==2.10.3
 MarkupSafe==1.1.1
 numpy==1.17.2
 pandas==0.24.2
-python-dateutil==2.8.0
+python-3.6.5
 pytz==2019.3
 scikit-learn==0.20.3
 scipy==1.3.1
 six==1.12.0
 Werkzeug==0.16.0
 pylint==2.4.4
+pylint 2.1.1
+astroid 2.0.4
