--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       - run:
-          name: install dependencies
+          name: dependencies installation
           command: |
             python3 -m venv .devops
             . .devops/bin/activate
@@ -32,7 +32,7 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
       # run lint!
       - run:
-          name: run lint
+          name: make lint
           command: |
             . .devops/bin/activate
             make lint
